@@ -1,3 +1,7 @@
+2003-06-16	ujwal
+
+    * Improved printing support.
+
 2003-06-15	ujwal
 
     * Incorporated Peter Lewis' "Paste Selection" patch.
